@@ -1,12 +1,33 @@
 <stylecopresultscache>
   <version>10</version>
+  <project key="-892161434">
+    <configuration>DEBUG;TRACE</configuration>
+  </project>
   <sourcecode name="Column.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
     <settings>
       <timestamp>08/01/2009 13:52:26</timestamp>
       <milliseconds>663</milliseconds>
     </settings>
-    <timestamp>08/01/2009 13:51:37</timestamp>
-    <milliseconds>968</milliseconds>
+    <timestamp>08/02/2009 08:44:44</timestamp>
+    <milliseconds>60</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="IRowFilter.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>08/01/2009 13:52:26</timestamp>
+      <milliseconds>663</milliseconds>
+    </settings>
+    <timestamp>08/02/2009 09:15:50</timestamp>
+    <milliseconds>323</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="Engine.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>08/01/2009 13:52:26</timestamp>
+      <milliseconds>663</milliseconds>
+    </settings>
+    <timestamp>08/01/2009 18:23:14</timestamp>
+    <milliseconds>196</milliseconds>
     <violations />
   </sourcecode>
   <sourcecode name="AssemblyInfo.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
@@ -18,13 +39,13 @@
     <milliseconds>836</milliseconds>
     <violations />
   </sourcecode>
-  <sourcecode name="Row.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+  <sourcecode name="RowList.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
     <settings>
       <timestamp>08/01/2009 13:52:26</timestamp>
       <milliseconds>663</milliseconds>
     </settings>
-    <timestamp>08/01/2009 13:45:34</timestamp>
-    <milliseconds>29</milliseconds>
+    <timestamp>08/02/2009 09:21:19</timestamp>
+    <milliseconds>574</milliseconds>
     <violations />
   </sourcecode>
   <sourcecode name="Schema.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
@@ -32,8 +53,89 @@
       <timestamp>08/01/2009 13:52:26</timestamp>
       <milliseconds>663</milliseconds>
     </settings>
-    <timestamp>08/01/2009 13:50:59</timestamp>
-    <milliseconds>115</milliseconds>
+    <timestamp>08/11/2009 20:56:23</timestamp>
+    <milliseconds>596</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="Row.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>08/01/2009 13:52:26</timestamp>
+      <milliseconds>663</milliseconds>
+    </settings>
+    <timestamp>08/02/2009 09:31:25</timestamp>
+    <milliseconds>589</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="CreateDatabaseCommand.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>08/01/2009 13:52:26</timestamp>
+      <milliseconds>663</milliseconds>
+    </settings>
+    <timestamp>08/11/2009 19:04:44</timestamp>
+    <milliseconds>30</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="EndOfInputException.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>08/01/2009 13:52:26</timestamp>
+      <milliseconds>663</milliseconds>
+    </settings>
+    <timestamp>08/11/2009 17:54:45</timestamp>
+    <milliseconds>972</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="ICommand.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>08/01/2009 13:52:26</timestamp>
+      <milliseconds>663</milliseconds>
+    </settings>
+    <timestamp>08/11/2009 19:04:07</timestamp>
+    <milliseconds>592</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="CreateTableCommand.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>08/01/2009 13:52:26</timestamp>
+      <milliseconds>663</milliseconds>
+    </settings>
+    <timestamp>08/11/2009 20:47:02</timestamp>
+    <milliseconds>883</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="LexerException.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>08/01/2009 13:52:26</timestamp>
+      <milliseconds>663</milliseconds>
+    </settings>
+    <timestamp>08/11/2009 17:54:45</timestamp>
+    <milliseconds>618</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="ParserException.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>08/01/2009 13:52:26</timestamp>
+      <milliseconds>663</milliseconds>
+    </settings>
+    <timestamp>08/11/2009 18:53:14</timestamp>
+    <milliseconds>363</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="Token.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>08/01/2009 13:52:26</timestamp>
+      <milliseconds>663</milliseconds>
+    </settings>
+    <timestamp>08/11/2009 17:54:45</timestamp>
+    <milliseconds>646</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="TokenType.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>08/01/2009 13:52:26</timestamp>
+      <milliseconds>663</milliseconds>
+    </settings>
+    <timestamp>08/11/2009 17:55:05</timestamp>
+    <milliseconds>416</milliseconds>
     <violations />
   </sourcecode>
   <sourcecode name="Table.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
@@ -41,8 +143,17 @@
       <timestamp>08/01/2009 13:52:26</timestamp>
       <milliseconds>663</milliseconds>
     </settings>
-    <timestamp>08/01/2009 13:50:48</timestamp>
-    <milliseconds>369</milliseconds>
+    <timestamp>08/12/2009 16:32:40</timestamp>
+    <milliseconds>786</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="AreEqualsFilter.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>08/01/2009 13:52:26</timestamp>
+      <milliseconds>663</milliseconds>
+    </settings>
+    <timestamp>08/17/2009 17:11:53</timestamp>
+    <milliseconds>260</milliseconds>
     <violations />
   </sourcecode>
   <sourcecode name="Database.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
@@ -50,22 +161,47 @@
       <timestamp>08/01/2009 13:52:26</timestamp>
       <milliseconds>663</milliseconds>
     </settings>
-    <timestamp>08/01/2009 13:53:46</timestamp>
-    <milliseconds>896</milliseconds>
-    <violations>
-      <violation namespace="Microsoft.StyleCop.CSharp.OrderingRules" rule="ElementsMustAppearInTheCorrectOrder" ruleCheckId="SA1201">
-        <context>All methods must be placed after all constructors.</context>
-        <line>18</line>
-        <warning>False</warning>
-      </violation>
-      <violation namespace="Microsoft.StyleCop.CSharp.OrderingRules" rule="ElementsMustAppearInTheCorrectOrder" ruleCheckId="SA1201">
-        <context>All methods must be placed after all properties.</context>
-        <line>23</line>
-        <warning>False</warning>
-      </violation>
-    </violations>
+    <timestamp>08/17/2009 17:13:06</timestamp>
+    <milliseconds>550</milliseconds>
+    <violations />
   </sourcecode>
-  <project key="-892161434">
+  <sourcecode name="IsNullFilter.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>08/01/2009 13:52:26</timestamp>
+      <milliseconds>663</milliseconds>
+    </settings>
+    <timestamp>08/17/2009 17:13:36</timestamp>
+    <milliseconds>246</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="InsertCommand.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>08/01/2009 13:52:26</timestamp>
+      <milliseconds>663</milliseconds>
+    </settings>
+    <timestamp>08/17/2009 17:13:47</timestamp>
+    <milliseconds>624</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="Lexer.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>08/01/2009 13:52:26</timestamp>
+      <milliseconds>663</milliseconds>
+    </settings>
+    <timestamp>08/17/2009 17:14:03</timestamp>
+    <milliseconds>221</milliseconds>
+    <violations />
+  </sourcecode>
+  <project key="-211537486">
     <configuration>DEBUG;TRACE</configuration>
   </project>
+  <sourcecode name="Parser.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>08/01/2009 13:52:26</timestamp>
+      <milliseconds>663</milliseconds>
+    </settings>
+    <timestamp>08/17/2009 17:17:11</timestamp>
+    <milliseconds>340</milliseconds>
+    <violations />
+  </sourcecode>
 </stylecopresultscache>
